2005-01-25  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdialog.c: Added Gtk::Dialog.alternative_dialog_button_order?, 
	#set_alternative_button_order for GTK+-2.6.x.
	* src/rbgtkclipboard.c: Added Gtk::Clipboard#set_image, #request_image,
	#wait_for_image, #wait_is_image_available?, #wait_is_target_available?
	#set_can_store, #store for GTK+-2.6.x.

2005-01-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkicontheme.c: Added Gtk::IconTheme#get_icon_sizes for GTK+-2.6.x.
	* src/rbgtkselectiondata.c: 
	Rename Gtk::Selection#targets_include_text? to #targets_include_text.
	Gtk::SelectionData#pixbuf, #set_pixbuf, #uris, #set_uris, 
	#target_include_image for GTK+-2.6.x.
	* src/rbgtktargetlist.c: Added Gtk::TargetList#add_(text|image|uri)_targets
	for GTK+-2.6.x.

2005-01-20  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcombo.c: Fix a memory leak reported by DaVinci.

2005-01-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcombobox.c: Added Gtk::ComboBox#active_text,
	#popup_accessible, #set_row_separator_func, #set_focus_on_click.

2005-01-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdrag.c: Added 
	Gtk::Drag.(dest|source)_add_(text|image|uri)_targets for
	GTK+-2.6.x.
	* src/rbgtktoolitem.c: Added Gtk::ToolItem#rebuild_menu 
	for GTK+-2.6.x.
	* src/rbgtkactiongroup.c: Added Gtk::ActionGroup#translate_string
	for GTK+-2.6.x.
	* src/rbgtkaction.c: Improved to support GTK+-2.6.x.
	Gtk::Action#sensitive => #sensitive?. 
	Gtk::Action#visible => #visible?. 
	Added Gtk::Action#is_visible?, #is_sensitive?.
	(Note)Those are special methods wraped 
	gtk_action_is_(sensitive|visible).
	Gtk::Action#(sensitve|visible)? wrap Properties.
	Gtk::Action#set_(sensitive|visible) wrap 
	gtk_action_set_(sensitive|visible).
	If you need to set "sensitive", "visible" properties.
	You need to use GLib::Object#set_property().
	
2005-01-11  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkfilefilter.c: Added Gtk::FileFilter#add_pixbuf_formats
	for GTK+-2.6.x.