@@ -2,7 +2,16 @@
 extconf.rb for Ruby/GTK extention library
 =end
 
-$LOAD_PATH.unshift File.expand_path(File.dirname(__FILE__) + '/../glib/src/lib')
+PACKAGE_NAME = "gtk2"
+PKG_CONFIG_ID = "gtk+-2.0"
+
+TOPDIR = File.expand_path(File.dirname(__FILE__) + '/..')
+MKMF_GNOME2_DIR = TOPDIR + '/glib/src/lib'
+SRCDIR = TOPDIR + '/gtk/src'
+SRCDIR20 = TOPDIR + '/gtk/src20'
+SRCDIR22 = TOPDIR + '/gtk/src22'
+
+$LOAD_PATH.unshift MKMF_GNOME2_DIR
 
 require 'mkmf-gnome2'
 
@@ -11,13 +20,12 @@ require 'mkmf-gnome2'
 #
 
 PKGConfig.have_package('gthread-2.0')
-pkgname= 'gtk+-2.0'
-PKGConfig.have_package(pkgname) or exit 1
+PKGConfig.have_package(PKG_CONFIG_ID) or exit 1
 check_win32
 
 STDOUT.print("checking for target... ")
 STDOUT.flush
-target = PKGConfig.variable(pkgname, "target")
+target = PKGConfig.variable(PKG_CONFIG_ID, "target")
 $defs << "-DRUBY_GTK2_TARGET=\\\"#{target}\\\""
 STDOUT.print(target, "\n")
 
@@ -44,97 +52,45 @@ if target=="x11"
   have_func("XGetErrorText")
 end
 
-top = File.expand_path(File.dirname(__FILE__) + '/..') # XXX
-$CFLAGS += " " + ['glib/src', 'pango/src'].map{|d|
-  "-I" + File.join(top, d)
-}.join(" ")
-
-if /cygwin|mingw/ =~ RUBY_PLATFORM
-  top = "../.."
-  [
-    ["glib/src", "ruby-glib2"],
-    ["pango/src", "ruby-pango"],
-  ].each{|d,l|
-    $LDFLAGS << " -L#{top}/#{d}"
-    $libs << " -l#{l}"
-  }
-end
+add_depend_package("glib2", "glib/src", TOPDIR)
+add_depend_package("pango", "pango/src", TOPDIR)
 
 #
 # create Makefiles
 #
 
 begin
-  src_dir   = File.expand_path(File.dirname(__FILE__) + '/src')
-  src20_dir = File.expand_path(File.dirname(__FILE__) + '/src20')
-  src22_dir = File.expand_path(File.dirname(__FILE__) + '/src22')
 
   Dir.mkdir('src') unless File.exist? 'src'
   Dir.chdir "src"
 
   begin
-    obj_ext = ".#{$OBJEXT}"
-
     File.delete("rbgtkinits.c") if FileTest.exist?("rbgtkinits.c")
-    $libs = $libs.split(/\s/).uniq.join(' ')
-    $source_files = Dir.entries(src_dir).select{|fname| /\.c$/ =~ fname }
-    $objs = $source_files.collect do |item|
-      item.gsub(/\.c$/, obj_ext)
-    end
-    add_obj("rbgtkinits.o")
+    File.delete("rbgtkinits.c") if FileTest.exist?("rbgtkinits.c")
+    system("ruby #{SRCDIR}/makeinits.rb #{SRCDIR}/*.c > rbgtkinits.c") or raise "failed to make GTK inits"
+    system("ruby #{SRCDIR}/makekeysyms.rb #{gdkincl}/gdkkeysyms.h > rbgdkkeysyms.h") or raise "failed to make GDK Keysyms"
 
     set_output_lib('libruby-gtk2.a')
     $defs << "-DRUBY_GTK2_COMPILATION"
 
-    $cleanfiles += ["rbgdkkeysyms.h", "rbgtkinits.c"] if $cleanfiles
+    if $distcleanfiles
+      $distcleanfiles << "rbgdkkeysyms.h"
+      $distcleanfiles << "rbgtkinits.c"
+    end
 
-    create_makefile("gtk2", src_dir)
+    create_makefile("gtk2", SRCDIR)
     $defs.delete("-DRUBY_GTK2_COMPILATION")
-    raise Interrupt if not FileTest.exist? "Makefile"
-
-    mfile = File.open("Makefile", "a")
-    if /mswin32/ =~ RUBY_PLATFORM
-      mfile.puts "	copy /Y  gtk2.lib .."
-      mfile.puts
-    end
-    mfile.print "\n"
-    $source_files.each do |e|
-      if e == "rbgdk.c"
-	mfile.print "rbgdk#{obj_ext}: rbgdk.c global.h\n"
-      elsif e == "rbgdkkeyval.c"
-	mfile.print "rbgdkkeyval#{obj_ext}: rbgdkkeyval.c rbgdkkeysyms.h\n"
-      elsif e == "init.c"
-	mfile.print "init#{obj_ext}: init.c rbgtk.h global.h rbgtkinits.c\n"
-      else
-	mfile.print "#{e.gsub(/\.c$/, obj_ext)}: #{e} rbgtk.h global.h\n"
-      end
-    end
-    mfile.print "rbgtkinits#{obj_ext}: rbgtkinits.c\n"
-
-    mfile.print "\
-
-rbgtkinits.c:;	   $(RUBY) $(srcdir)/makeinits.rb $(srcdir)/*.c > $@
-rbgdkkeysyms.h:;	$(RUBY) $(srcdir)/makekeysyms.rb #{gdkincl}/gdkkeysyms.h > $@
-"
-    mfile.close
   ensure
     Dir.chdir ".."
   end
 
-
-  $CFLAGS = " -I#{src_dir} " + $CFLAGS
-  if /cygwin|mingw/ =~ RUBY_PLATFORM
-    $LDFLAGS << " -L../src"
-    $libs << " -lruby-gtk2"
-  end
-  set_output_lib(nil)
-
+  add_depend_package("gtk2", "gtk/src", TOPDIR)
 
   Dir.mkdir('src20') unless File.exist? 'src20'
   Dir.chdir "src20"
   begin
     $objs = ["rbgtk20.o"]
-    create_makefile("gtk20", src20_dir)
+    create_makefile("gtk20", SRCDIR20)
   ensure
     Dir.chdir ".."
   end
@@ -143,7 +99,7 @@ rbgdkkeysyms.h:;	$(RUBY) $(srcdir)/makekeysyms.rb #{gdkincl}/gdkkeysyms.h > $@
   Dir.chdir "src22"
   begin
     $objs = ["rbgtk22.o"]
-    create_makefile("gtk22", src22_dir)
+    create_makefile("gtk22", SRCDIR22)
   ensure
     Dir.chdir ".."
   end
