@@ -4,7 +4,7 @@
   rbgtk20.c -
 
   $Author: mutoh $
-  $Date: 2003/06/22 17:37:51 $
+  $Date: 2005/01/29 11:44:15 $
 
   Copyright (C) 2003 KUBO Takehiro
                 but many codes are copyed from src/rbgtkclipboard.c
@@ -84,8 +84,8 @@ void
 Init_gtk20()
 {
     rbgtk_clipboard_get_type = clipboard_get_type;
-    rbgtk_get_clipboard = get_clipboard;
-    rbgtk_make_clipboard = make_clipboard;
+    rbgtk_get_clipboard = (RBGtkClipboardGetFunc)get_clipboard;
+    rbgtk_make_clipboard = (RBGtkClipboardMakeFunc)make_clipboard;
     rbgtk_tree_row_reference_get_type = tree_row_reference_get_type;
-    rbgtk_get_tree_row_reference = get_tree_row_reference;
+    rbgtk_get_tree_row_reference = (RBGtkTreeRowReferenceGetFunc)get_tree_row_reference;
 }
